# NewFile

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.quail/: build.bat  clear_builds.ps1  exe_with_res.ps1
cmake/: properties.cmake
extras/: FileSM-ICON.xcf  FileSM-ICON_Clean.xcf
project/: CMakeLists.txt
project/inc/: dialogWindow.hpp  framework.hpp  io.hpp
project/res/: main.manifest  main.rc  resource.h
project/src/: dialogWindow.cpp  io.cpp  main.cpp
